# radplot

./: .clang-format  .gitignore  CMakeLists.txt
libradplot/: CMakeLists.txt
libradplot/include/radplot/: Figure.h  Math.h
libradplot/shaders/: cube.shader  grid.shader  quad.shader
libradplot/src/: Buffer.cpp  Buffer.h  Error.cpp  Error.h  Figure.cpp  Figure.h  FigurePriv.cpp  FigurePriv.h  Log.cpp  Log.h  Radplot.cpp  Radplot.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
libradplot/src/api/: Figure.cpp
python/: CMakeLists.txt
python/include/: pyradplot.h
python/radplot/: __init__.py  figure.py  radplot.py
python/scripts/: window.py
python/src/: pyradplot.cpp  pyradplot.h
rad/: CMakeLists.txt
rad/src/: Main.cpp
